mysql.yaml


apiVersion: apps/v1
kind: StatefulSet
metadata:
 name: mysql
 namespace: microservices
spec:
 serviceName: mysql-service
 replicas: 1
 selector:
   matchLabels:
     app: mysql
 template:
   metadata:
     labels:
       app: mysql
   spec:
     containers:
     - name: mysql
       image: mysql:8
       ports:
       - containerPort: 3306
       volumeMounts:
       - name: mysql-storage
         mountPath: /var/lib/mysql
       resources:
         requests:
           memory: "256Mi"
           cpu: "250m"
         limits:
           memory: "512Mi"
           cpu: "500m"
       livenessProbe:
         exec:
           command:
           - mysqladmin
           - ping
           - -h
           - localhost
         initialDelaySeconds: 30
         periodSeconds: 10
         timeoutSeconds: 5
       readinessProbe:
         exec:
           command:
           - mysqladmin
           - ping
           - -h
           - localhost
         initialDelaySeconds: 5
         periodSeconds: 5
         timeoutSeconds: 1
 volumeClaimTemplates:
 - metadata:
     name: mysql-storage
   spec:
     accessModes:
       - ReadWriteOnce
     storageClassName: ebs-gp3-sc # CHANGE: This tells EKS to use the AWS EBS StorageClass we created.
     resources:
       requests:
         storage: 10Gi # CHANGE: Increased from 1Gi. 1Gi is too small for a database and can fill up quickly.


---


apiVersion: v1
kind: Service
metadata:
 name: mysql-service
 namespace: microservices
spec:
 selector:
   app: mysql
 ports:
   - port: 3306
     targetPort: 3306
 type: ClusterIP
 clusterIP: None  # Headless service for StatefulSet


---


apiVersion: v1
kind: Service
metadata:
 name: mysql-service-external
 namespace: microservices
spec:
 selector:
   app: mysql
 ports:
   - port: 3306
     targetPort: 3306
 type: ClusterIP
