order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: order-service
 namespace: microservices
spec:
 replicas: 1
 selector:
   matchLabels:
     app: order-service
 template:
   metadata:
     labels:
       app: order-service
   spec:
     serviceAccountName: app-service-account
     containers:
     - name: order-service
       image: 669063901000.dkr.ecr.us-east-1.amazonaws.com/k8s-order-service
       imagePullPolicy: IfNotPresent
       ports:
       - containerPort: 3003
---


apiVersion: v1
kind: Service
metadata:
 name: order-service
 namespace: microservices
 labels:
   app: order-service
spec:
 selector:
   app: order-service
 ports:
   - port: 3003
     targetPort: 3003
 type: ClusterIP
