product-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: product-service
 namespace: microservices
spec:
 replicas: 1
 selector:
   matchLabels:
     app: product-service
 template:
   metadata:
     labels:
       app: product-service
   spec:
     serviceAccountName: app-service-account
     containers:
     - name: product-service
       image: 669063901000.dkr.ecr.us-east-1.amazonaws.com/k8s-product-service:latest
       imagePullPolicy: IfNotPresent
       ports:
       - containerPort: 3002
---


apiVersion: v1
kind: Service
metadata:
 name: product-service
 namespace: microservices
 labels:
   app: product-service
spec:
 selector:
   app: product-service
 ports:
   - port: 3002
     targetPort: 3002
 type: ClusterIP
