user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: user-service
 namespace: microservices
spec:
 replicas: 1
 selector:
   matchLabels:
     app: user-service
 template:
   metadata:
     labels:
       app: user-service
   spec:
     serviceAccountName: app-service-account
     containers:
     - name: user-service
       image: 669063901000.dkr.ecr.us-east-1.amazonaws.com/k8s-user-service:latest # CHANGE: Point to the full ECR image path
       imagePullPolicy: IfNotPresent # CHANGE: Changed from 'Never' to allow EKS nodes to pull the image
       ports:
       - containerPort: 3001
---

apiVersion: v1
kind: Service
metadata:
 name: user-service
 namespace: microservices
 labels:
   app: user-service
spec:
 selector:
   app: user-service
 ports:
   - port: 3001
     targetPort: 3001
 type: ClusterIP
